:bento: (lettres) OCR
650406.LCM02.THOU

--- a/lettres.html
+++ b/lettres.html
@@ -4258,11 +4258,54 @@
     
     
     </article><article><h2 id='650406.LCM02.THOU'>Lettre n° 650406.LCM02.THOU<a href="https://beatricemundo.github.io/lettresmedicis6466/#650406.LCM02.THOU">↑</a></h2><discours loc="CathMed" id="650406.LCM02.THOU" date="1565—6avril">
-      <p> Mon cousin, j'ay esté très aise d'entendre par vostre lettre du XXVIIIe du passé que vous avez donné commencement à ce que je désire estre faict au boullevert du cousté des Thuille- ryes, Jouant néantmoins le saige advis que vous avez pris de ne délaisser pas ce qui se faisoit à celluy qui est entre la porte S1 An- thoine et celle du Temple pour le dommaige que ce seroit, et quant aux Tournelles, je m'asseure, mon cousin, que vous y ferez ce qui sera possible, affin qu'il en sorte le plus de de- nyers que l'on pourra en tirer pour employer à ce qui est commancé auxdictes Thuilleryes.</p>
-      <p> Au demeurant, le Roy monsieur mon fils vous escript si amplement son intention sur le danger que vous monstrez craindre de la ve- neue à Paris de mes cousins les prince de Condé et cardinal de Lorraine que je m'as- seure que vous en serez assez esclaircy, et quant à la déclaration que vous demandez, mon compère Monsieur le Connestable vous escripra ce que nous avons sur ce advisé par ensemble, m'asseurant que, pour estre votre père qui ayme bien vostre bien, vostre honneur et vostre contantement plus que de personne qui vive, et moy vous aymant, comme vous en devez assez estre asseuré, vous nous croyrez</p>
-      <p> bien tous deux et vous accommodderez à ce que nous désirons faire en cest endroict, de quoy il sortyra, Dieu aydant, ee que vous pouvez aussi désirer pour vostre satisfaction et repoz de vostre esprit, dont je me remec- tray sur luy et sur ce que j'en ay dit au jeune La Porte, présent porteur, qui vous dira aussi que vous estiez, avant son arrivée, expédié de ce que le brevet de vostre pension porte, et vous prye estre asseuré que tout ce qui vous touchera me sera tousjours pour chèrement recommandé, pryant Dieu, mon cousin, vous donner ce que désirez.</p>
-      <p> De Touart 1, le vie jour d'avril 1565.</p>
-      <p> (De sa main.) Mon cousin, je viens de rese- voyr les information que je envoyé à Monsieur le Chanselier pour, quant le Roy mon fils sera à Bourdeaulx, reguarder et y délibérer, car je désyre voyr tout sesi apésé. Je vous prie m'en- voyer vostre femme que je vous renvoyré dè le lendemayn que la royne ma fille sera partie.</p>
+      <p> Mon cousin, j'ay esté très aise d'entendre
+        par vostre lettre du XXVIIIe du passé que vous
+        avez donné commencement à ce que je désire
+        estre faict au boullevert du cousté des Thuilleryes,
+        louant néantmoins le saige advis que
+        vous avez pris de ne délaisser pas ce qui se
+        faisoit à celluy qui est entre la porte St Anthoine
+        et celle du Temple pour le dommaige
+        que ce seroit, et quant aux Tournelles, je
+        m'asseure, mon cousin, que vous y ferez ce qui
+        sera possible, affin qu'il en sorte le plus de denyers
+        que l'on pourra en tirer pour employer
+        à ce qui est commancé auxdictes Thuilleryes.</p>
+        <p>Au demeurant, le Roy monsieur mon fils
+        vous escript si amplement son intention sur le
+        danger que vous monstrez craindre de la veneue
+        à Paris de mes cousins les prince de
+        Condé et cardinal de Lorraine que je m'asseure
+        que vous en serez assez esclaircy, et
+        quant à la déclaration que vous demandez,
+        mon compère Monsieur le Connestable vous
+        escripra ce que nous avons sur ce advisé par
+        ensemble, m'asseurant que, pour estre votre
+        père qui ayme bien vostre bien, vostre honneur
+        et vostre contantement plus que de personne
+        qui vive, et moy vous aymant, comme vous
+        en devez assez estre asseuré, vous nous croyrez
+        bien tous deux et vous accommodderez à ce
+        que nous désirons faire en cest endroict, de
+        quoy il sortyra, Dieu aydant, ee que vous
+        pouvez aussi désirer pour vostre satisfaction
+        et repoz de vostre esprit, dont je me remectray
+        sur luy et sur ce que j'en ay dit au jeune
+        La Porte, présent porteur, qui vous dira aussi
+        que vous estiez, avant son arrivée, expédié de
+        ce que le brevet de vostre pension porte, et
+        vous prye estre asseuré que tout ce qui vous
+        touchera me sera tousjours pour chèrement
+        recommandé, pryant Dieu, mon cousin, vous
+        donner ce que désirez.</p>
+      <p>De Touart, le VIe jour d'avril 1565.</p>
+      <p>(De sa main.) Mon cousin, je viens de resevoyr
+        les information que je envoyé à Monsieur
+        le Chanselier pour, quant le Roy mon fils sera
+        à Bourdeaulx, reguarder et y délibérer, car je
+        désyre voyr tout sesi apésé. Je vous prie m'envoyer
+        vostre femme que je vous renvoyré dè le
+        lendemayn que la royne ma fille sera partie.</p>
       <p> Vostre bonne cousine,</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.  </p>
     </discours>
