:bento: (lettres) OCR
650719.LCM10.MOMO

--- a/lettres.html
+++ b/lettres.html
@@ -4959,7 +4959,31 @@
     
     
     </article><article><h2 id='650719.LCM10.MOMO'>Lettre n° 650719.LCM10.MOMO<a href="https://beatricemundo.github.io/lettresmedicis6466/#650719.LCM10.MOMO">↑</a></h2><discours loc="CathMed" id="650719.LCM10.MOMO" date="1565-19juillet">
-      <p> Monsr de St-Sulpice, le temps me semble dejà si long despuis le partement de la royne ma fille 2, et Les chaleurs ont esté si grandes, que je desire bien sçavoir s'elle s'en sera pas trouvée mal et comme toutes choses seront passées à son arrivée. Quant à mes nouvelles, je ne vous puis dire aultre chose si non que les comperes nous sont venus en ce lieu avec la plus grande volonté et délibération de faire service au Roy mon filz et monstrent bien qu'ils se trouvent bien de ceste alliance et qu'ils n'ont aucune volonté, quelque menée qu'on ait faicte, de s'en despartir; aussi esperai- je bien qu'ils serviront aussi bien le filz qu'ils ont faict le pere. Dieu merci, toutes choses continuent en ce royaume en la mesme pacification et obeissance que le pouvons désirer, qui - est la meilleure nouvelle que je vous puisse mander pour cette heure, vous priant ne faillir de m'advertir incontinent de l'arrivée de la royne ma fille devers le roy son mari. Priant Dieu, Monsr de St-Sulpice, vous avoir en sa saincte et digne garde. De Mont-de-Marsan, ce XIXe de juillet 1565.</p>
+      <p>Monsr de St-Sulpice, le temps me semble
+        dejà si long despuis le partement de la royne
+        ma fille, et Les chaleurs ont esté si grandes,
+        que je desire bien sçavoir s'elle s'en sera pas
+        trouvée mal et comme toutes choses seront
+        passées à son arrivée. Quant à mes nouvelles,
+        je ne vous puis dire aultre chose si non que
+        les comperes nous sont venus en ce lieu avec
+        la plus grande volonté et délibération de faire
+        service au Roy mon filz et monstrent bien
+        qu'ils se trouvent bien de ceste alliance et
+        qu'ils n'ont aucune volonté, quelque menée
+        qu'on ait faicte, de s'en despartir; aussi esperai-je
+        bien qu'ils serviront aussi bien le filz
+        qu'ils ont faict le pere. Dieu merci, toutes
+        choses continuent en ce royaume en la mesme
+        pacification et obeissance que le pouvons désirer,
+        qui est la meilleure nouvelle que je
+        vous puisse mander pour cette heure, vous
+        priant ne faillir de m'advertir incontinent de
+        l'arrivée de la royne ma fille devers le roy
+        son mari. Priant Dieu, Monsr de St-Sulpice,
+        vous avoir en sa saincte et digne garde.</p>
+      <p>De Mont-de-Marsan, ce XIXe de juillet
+        1565.</p>
       <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
       <p> Et plus bas : <hi style="font-variant: small-caps">Robertet</hi>.  </p>
     </discours>
