:bento: correction typo 640504.LCM02.BARL

--- a/lettres.html
+++ b/lettres.html
@@ -605,7 +605,7 @@
 
 </article><article><h2 id='640504.LCM02.BARL'>Lettre n° 640504.LCM02.BARL<a href="https://beatricemundo.github.io/lettresmedicis6466/#640504.LCM02.BARL">↑</a></h2><strong> À MONSIEUR DE MATIGNON, LIEUTENANT DU ROY AU GOUVERNEMENT DE NORMANDIE.</strong><discours loc="CathMed" id="640504.LCM02.BARL" date="1564—4mai">
   <p> <rs type="personne-pouvoir">Monsieur de Matignon</rs>, <rs type="famillepouvoir">le Roy monsieur mon filz et moy</rs> avons esté bien ayses d'entendre que vous ayez faict faire la publication de la paix avec les Anglois, suivant ce qu'il vous en avoit escript. Quant vous aurez sceu que du costé d'Angleterre, ilz auront faict le semblable le long de leurs portz maritimes, vous nous en advertirez, et ferez au demeurant service <rs type="famillepouvoir">au Roy monsieur mon filz</rs> de vous rendre par devers luy le plus tost que vous sera possible, affin que, ayant advisé après vostre arrivée aux choses les plus nécessaires pour le bien et repoz de son pays de Normandye, vous vous en puissiez retourner au lieu de vostre charge incontinent. Pryant Dieu, <rs type="personne-pouvoir">Monsieur de Matignon</rs>, qu'il vous ayt en sa garde.</p>
-  <p> Escript à Bar le Duc, le <hi style="font-variant: small-caps">iiii</hi><sup><small>e</small></sup> jour de may 1564.</p>p>
+  <p> Escript à Bar le Duc, le <hi style="font-variant: small-caps">iiii</hi><sup><small>e</small></sup> jour de may 1564.</p>
   <p> <hi style="font-variant: small-caps">Caterine</hi>.</p>
   <p> <hi style="font-variant: small-caps">Bourdin</hi>.</p>
 </discours>
